--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "next": "^13.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rescript": "^10.1.3"
+    "rescript": "^10.1.3",
+    "cypress:run": "cypress run",
+    "cypress:open": "cypress open"
   },
   "repository": "https://github.com/ryyppy/rescript-nextjs-template",
   "scripts": {
@@ -40,6 +42,7 @@
     "autoprefixer": "10.1.0",
     "babel-loader": "^8.3.0",
     "cssnano": "5.0.5",
+    "cypress": "^12.7.0",
     "gentype": "4.1",
     "next-transpile-modules": "7.1.2",
     "postcss": "8.2.15",
